# energy_estimator

./: .gitignore  README.md  dict_mask_params_boolean.pkl  dict_mask_params_probs.pkl  mlp_model.pth  pyproject.toml  requirements.txt  test_code.ipynb  test_energy.py
docs/: algorithm.md
energy_estimator/: __init__.py  grid_interpolation.py  layer_energy_interpolation.py  main.py  model_energy_aggregation.py  power_lookup_tables.py
energy_estimator/data/CoralDevBoard/: linear_power_report.xlsx
energy_estimator/data/JetsonNano/: conv_k5_s1_p0_d1_power_report.xlsx  conv_power_report.xlsx  linear_power_report.xlsx
