[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "energy_estimator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
energy_estimator = ["data/**/*.xlsx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
